# agent-builder

./: .gitignore  .pre-commit-config.yaml  .prompt  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: integration-test.yml  pypi-publish-on-release.yml  test-lint.yml
src/strands_agents_builder/: strands.py  tools.py
src/strands_agents_builder/models/: bedrock.py  ollama.py
src/strands_agents_builder/utils/: kb_utils.py  logging_utils.py  mcp_utils.py  model_utils.py  session_utils.py
tests/: __init__.py  conftest.py  test_callback_handler.py  test_models_bedrock.py  test_strands.py  test_strands_mcp_integration.py  test_tools.py
tests-integ/: end_to_end_test.py  integration_test.py
tests/tools/: test_rich_interface.py  test_store_in_kb.py  test_strand.py  test_welcome.py
tests/utils/: test_kb_utils.py  test_logging_utils.py  test_mcp_utils.py  test_model_utils.py  test_session_utils.py  test_welcome_utils.py
tests_integ/: conftest.py  test_build_agent_from_specifications.py  test_custom_load_from_file.py  test_semantic_create_tool.py  test_sementic_create_tool.py  test_shell_then_exit.py
tools/: rich_interface.py  store_in_kb.py  strand.py  welcome.py
